# se-toolkit-lab-7

./: .env.tests.example  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/tests/unit/: test_analytics.py
bot/: .dockerignore  Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py  natural_language.py
bot/services/: __init__.py  api_client.py  llm_client.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx
wiki/: docker-compose.md  lms-api.md
